tests/snapshots/integration__integration_tests__directives__switch_internal_powershell_directive.snap
---
source: tests/integration_tests/directives.rs
info:
  program: wt
  args:
    - "--internal=powershell"
    - switch
    - feature
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
<<<<<<< HEAD
Set-Location [REPO].feature
||||||| 930c5842
Set-Location '[PATH]'
=======
Set-Location _REPO_.feature
>>>>>>> origin/main

----- stderr -----
<<<<<<< HEAD
[2m○[22m Switched to worktree for [1mfeature[22m @ [REPO].feature
||||||| 930c5842
⚪ Switched to worktree for [1mfeature[22m @ [1m[REPO].feature[22m
=======
⚪ Switched to worktree for [1mfeature[22m @ [1m_REPO_.feature[22m
>>>>>>> origin/main
